; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/cp/extr_repo.c_repo_export_class_p.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/cp/extr_repo.c_repo_export_class_p.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@flag_use_repository = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @repo_export_class_p(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* @flag_use_repository, align 4
  %5 = icmp ne i32 %4, 0
  br i1 %5, label %7, label %6

6:                                                ; preds = %1
  store i32 0, i32* %2, align 4
  br label %17

7:                                                ; preds = %1
  %8 = load i32, i32* %3, align 4
  %9 = call i32 @CLASSTYPE_VTABLES(i32 %8)
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %12, label %11

11:                                               ; preds = %7
  store i32 0, i32* %2, align 4
  br label %17

12:                                               ; preds = %7
  %13 = load i32, i32* %3, align 4
  %14 = call i32 @CLASSTYPE_VTABLES(i32 %13)
  %15 = call i32 @DECL_ASSEMBLER_NAME(i32 %14)
  %16 = call i32 @IDENTIFIER_REPO_CHOSEN(i32 %15)
  store i32 %16, i32* %2, align 4
  br label %17

17:                                               ; preds = %12, %11, %6
  %18 = load i32, i32* %2, align 4
  ret i32 %18
}

declare dso_local i32 @CLASSTYPE_VTABLES(i32) #1

declare dso_local i32 @IDENTIFIER_REPO_CHOSEN(i32) #1

declare dso_local i32 @DECL_ASSEMBLER_NAME(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
